RESOLVED FIXED15800
REGRESSION (r27299-r27305): RegExp leaks on Tiger
https://bugs.webkit.org/show_bug.cgi?id=15800
Summary REGRESSION (r27299-r27305): RegExp leaks on Tiger
mitz
Reported 2007-11-02 11:03:26 PDT
The build bot is seeing leaks starting with build 1950 <http://build.webkit.org/builders/trunk-mac-intel-debug/builds/1950>. I cannot reproduce the leaks on my Leopard system. Given the backtraces I suspect <http://trac.webkit.org/projects/webkit/changeset/27303>.
Attachments
proposed fix (2.37 KB, patch)
2007-11-03 01:15 PDT, Alexey Proskuryakov
darin: review+
Alexey Proskuryakov
Comment 1 2007-11-03 01:15:40 PDT
Created attachment 17021 [details] proposed fix
Darin Adler
Comment 2 2007-11-03 01:20:38 PDT
Comment on attachment 17021 [details] proposed fix Looks good. Why did my code change cause the regression? Could we use OwnPtr here? r=me
Alexey Proskuryakov
Comment 3 2007-11-03 01:51:42 PDT
(In reply to comment #2) > Why did my code change cause the regression? It was my change that added RegExp.compile - I wrongly assumed setRegExp deleted the old value. > Could we use OwnPtr here? Oops, forgot about it somehow. Changed to use OwnPtr. > r=me Committed revision 27393.
Note You need to log in before you can comment on or make changes to this bug.