        Reviewed by Darin.

http://bugs.webkit.org/show_bug.cgi?id=15800
        REGRESSION (r27303): RegExp leaks

        * kjs/regexp_object.h:
        (KJS::RegExpImp::setRegExp):
        (KJS::RegExpImp::regExp):
        (KJS::RegExpImp::classInfo):
        * kjs/regexp_object.cpp:
        (RegExpImp::RegExpImp):
        (RegExpImp::~RegExpImp):
        Renamed reg member variable to m_regExp, changed it to use OwnPtr.



Canonical link: https://commits.webkit.org/21314@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@27393 268f45cc-cd09-0410-ab3c-d52691b4dbfc